--- a/src/main/resources/com/example/templatemodule2/Module.fxml
+++ b/src/main/resources/com/example/templatemodule2/Module.fxml
@@ -37,10 +37,8 @@
       </Rectangle>
       <MenuButton fx:id="menuBar" layoutX="-2.0" layoutY="132.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="174.0" text="Features">
         <items>
-          <MenuItem fx:id="featureButtonOne" mnemonicParsing="false" onAction="#onFeatureButtonOne" text="Action 1" />
-          <MenuItem mnemonicParsing="false" text="Action 2" />
-           <MenuItem mnemonicParsing="false" text="Action 3" />
-           <MenuItem mnemonicParsing="false" text="Action 4" />
+          <MenuItem fx:id="facuiltyListButton" mnemonicParsing="false" onAction="#onFacuiltyListButton" text="Facuilty List" />
+          <MenuItem fx:id="studentListButton" mnemonicParsing="false" onAction="#onStudentListButton" text="Student List" />
         </items>
       </MenuButton>
       <MenuButton fx:id="menuBar1" layoutX="-2.0" layoutY="163.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="174.0" text="Modules">
@@ -67,7 +65,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="subLabel" alignment="TOP_CENTER" layoutX="237.0" layoutY="151.0" prefHeight="46.0" prefWidth="520.0" text="subLabel">
+      <Label fx:id="subLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="237.0" layoutY="151.0" prefHeight="46.0" prefWidth="520.0" text="subLabel">
          <font>
             <Font size="36.0" />
          </font>
@@ -109,7 +107,7 @@
          </children>
       </Group>
       <Button fx:id="searchButton" layoutX="350.0" layoutY="177.0" mnemonicParsing="false" onAction="#onSearchButton" text="Search" />
-      <TextField fx:id="searchTextField" layoutX="195.0" layoutY="177.0"  />
-      <Button fx:id="addButton" layoutX="750.0" layoutY="177.0" mnemonicParsing="false"  text="Search" />
+      <TextField fx:id="searchTextField" layoutX="195.0" layoutY="177.0" />
+      <Button fx:id="addButton" layoutX="750.0" layoutY="177.0" mnemonicParsing="false" text="Search" />
    </children>
 </AnchorPane>
